# gltut

./: .gitignore  shader_debug.cap
app/: Cargo.toml  build.rs
app/src/: camera.rs  main.rs  model.rs  renderer.rs  scratch.md  texture.rs  vertex.rs  world.rs
app/src/shaders/: hello.frag  hello.vert
notes/: 1_the_basics.md  buffers.md  glam.md  gltf.md  minimized.md  wgpu.md
