[package]
name = "app"
version = "0.1.0"
authors = ["meowjesty <meowjesty_nyan@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fixedstep = "*"
winit = "*"
wgpu_glyph = "*"
wgpu = "*"
futures = { version = "*" }
glam = { version = "*", features = ["bytemuck", "serde"] }
bytemuck = { version = "*", features = ["derive"] }
image = "*"

[build-dependencies]
anyhow = "*"
fs_extra = "*"
glob = "*"
shaderc = "*"
rayon = "*"